fixed bottom nav scrollbar

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -91,3 +91,18 @@ a, a:visited, .a {
 .slider-container {
   padding : 40px 0;
 }
+
+
+.swiper-scrollbar {
+  position: relative !important;
+  background: #4a4a4a;
+  width: 300px !important;
+  margin: 59px auto;
+}
+
+.scroll-bar {
+ background:  #4a4a4a;
+   .scroll-node {
+      background: #a5a7ac;
+   }
+}
